# ThematicAnalysis

./: .pre-commit-config.yml  Dockerfile  Makefile  README.md  docker-compose.yml  log_conf.yaml  pyproject.toml
data/: wallmart.csv
notebooks/: api_responses.ipynb  clustring.ipynb  coding.ipynb  hierarchical_coding.ipynb  single_query.ipynb
src/thematic_analysis/: app.py  config.py  llm.py  logger.py  models.py  prompts.py  routes.py  types.py
src/thematic_analysis/strategies/: coding_strategy.py  prompt.py  prompt_strategy.py
src/thematic_analysis/utils/: cleaning.py  embeddings.py
